crates/telemetry-adapters/tests/snapshots/snapshots_games_v9__dirt5_realistic_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_games_v9.rs
assertion_line: 95
expression: normalized
---
speed_ms: 50
steering_angle: 0
throttle: 0
brake: 0
clutch: 0
rpm: 8002.3105
max_rpm: 0
gear: 4
num_gears: 0
lateral_g: 0
longitudinal_g: 0
vertical_g: 0
slip_ratio: 0.02
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 0
  - 0
  - 0
  - 0
tire_pressures_psi:
  - 0
  - 0
  - 0
  - 0
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
position: 0
lap: 0
current_lap_time_s: 0
best_lap_time_s: 0
last_lap_time_s: 0
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0
engine_temp_c: 0
extended:
  brakeinput:
    type: Float
    value: 0.1
  clutchinput:
    type: Float
    value: 0
  decoder_type:
    type: String
    value: codemasters_custom_udp
  enginerate:
    type: Float
    value: 838
  gear:
    type: Float
    value: 4
  speed:
    type: Float
    value: 50
  steeringinput:
    type: Float
    value: -0.15
  suspensionpositionfl:
    type: Float
    value: 0.02
  suspensionpositionfr:
    type: Float
    value: 0.01
  suspensionpositionrl:
    type: Float
    value: 0.01
  suspensionpositionrr:
    type: Float
    value: 0.03
  throttleinput:
    type: Float
    value: 0.8
  wheelpatchspeedfl:
    type: Float
    value: 51
  wheelpatchspeedfr:
    type: Float
    value: 51
  wheelpatchspeedrl:
    type: Float
    value: 50
  wheelpatchspeedrr:
    type: Float
    value: 50
sequence: 0
